--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
         "start": "run-p server client"
     },
     "dependencies": {
+        "history": "^5.0.0",
         "npm-run-all": "^4.1.5"
     }
 }
